--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <h1>This is an page to intorduce about myself</h1>
-    <h2>eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</h2>
+    <h1>This is a page to introduce myself</h1>
+    <h2>heeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</h2>
   </head>
   <body>
     <h3>123456789</h3>
